# Text-to-3D

./: .env  LICENSE  RAG_generator_copy.py  README.md  assistant_copy.py  build.bat  build.sh  build_all.py  build_executable.py  deploy.py  desktop_app.py  main.py  manifest.in  pyproject.toml  reference_library.py  requirements.txt  setup.py
src/: assistant.py  llm_engine.py  smart_assistant.txt
src/generation/: Cadquery_library.txt  RAG_generator.py  Things to note.txt  cadquery_generator.py  export.py  reference_library.py
src/printing/: mainsail_client.py  slicer_interface.py
